--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             border-radius: 8px;
             transition: background-color 0.2s ease;
             min-width: 240px;
+            cursor: pointer;
         }
 
         .demo-button:hover {
@@ -68,6 +69,21 @@
 
         .demo-button:active {
             background-color: #2c5282;
+        }
+
+        .footer {
+            margin-top: 4rem;
+            font-size: 0.875rem;
+            color: #a0aec0;
+        }
+
+        .footer a {
+            color: #4299e1;
+            text-decoration: none;
+        }
+
+        .footer a:hover {
+            text-decoration: underline;
         }
 
         @media (max-width: 600px) {
@@ -98,8 +114,12 @@
         <p class="subtitle">Interactive prototype demonstrating data entry improvements.</p>
         
         <div class="button-container">
-            <a href="public.html" class="demo-button">Public Form Demo</a>
-            <a href="portal.html" class="demo-button">Portal (Logged-In) Demo</a>
+            <a href="./public.html" class="demo-button">Public Form Demo</a>
+            <a href="./portal.html" class="demo-button">Portal (Logged-In) Demo</a>
+        </div>
+
+        <div class="footer">
+            <p>GitHub Repository: <a href="https://github.com/Sadhana73/PM-zohoForms" target="_blank">PM-zohoForms</a></p>
         </div>
     </div>
 </body>
